# C-Player

./: .gitignore  CMakeLists.txt
include/: ffmpegUtil.h  mediaPlayer.h
include/pcClient/: ClientUtil.h  HttpUtil.h  MediaProcessor.hpp  ffmpegUtil.h
include/pcClient/pages/: LiveList.h  LivePage.h  LoginPage.h
src/: Boot.cpp  ClientUtil.cpp  HttpUtil.cpp
src/pages/: LiveList.cpp  LivePage.cpp  LoginPage.cpp
